tests/expected_invalid_generic_state_decl.diag.out
<input>:2:20: error: state declarations may not be generic
    public state Result<T> {
                       ^
